styles.css
/* ... */
.call-to-action:hover {
  background-color: #d6eef9;
  cursor: pointer;
}

/* main page left and right containers */
.container_left {
  display: flex;
  flex-direction: column;
  align-items: center;

}
.container_right {
  display: flex;
  justify-content: center;
}

/* .container_right {
    position: relative;
    width: 100%;
    margin-top: 5vh;
    margin-bottom: 5vh;
    padding-bottom: 56.25%;
    max-height: 100vh;
    max-width: 600px;
    height: 0;
    overflow: hidden;
    box-sizing: border-box;
  }
  .responsive-iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    box-sizing: border-box;
  } */

/* Media query for things that happen when the screen is less than 600px wide */
@media only screen and (max-width: 600px) {
  .logo {
    padding-left: 40px;
    height: 140px;
  }

  .main {
    text-align: center;
    margin-top: 50px;
    margin-left: 10px;
    margin-right: 10px;
  }
  main h1 {
    font-size: 2.5vh;
  }
  main p {
    font-size: 1.9vh;
  }

  ul li {
    padding-top: 15px;
    padding-bottom: 15px;
    margin-right:30px; 
    color: #A9704E;
    list-style-type: none;
    text-align: right;
  }
  .container_right {
    padding-bottom: 20px;
    padding-top: 30px;
  }
  .responsive-iframe {
    width: 360px;
    height: 226px;
  }

    /* .main {
        margin-left: 30px;
        margin-right: 30px;
        font-size: 14px;
        text-align: left;
    }
    .logo {
      width: 200px;
    }
    body {
        background-image: none;
        background-color: #d3e4eb;
    }
    .footer {
        background-color: #2d444f;
        
    }
    .call-to-action {
      font-size: 10px;
    }
 */
  }

.footer {
    /* background-color: #678999d3; */
    display: flex;
    justify-content: center;
    color: white;
    font-size:12pt;
    padding-top: 30px;
    flex-direction: column;
    margin: 0;
}

.index_footer {
  /* background-color: #678999d3; */
  display: flex;
  justify-content: center;
  color: white;
  font-size:12pt;
  padding: 2vh;
  flex-direction: column;
  margin: 0;
  padding: 0;
}

.icons {
    display: flex;
    justify-content: center;
    gap: 30pt;
    font-size: 30pt;    
    padding-top: 10pt;
}

.social-icon {
    color: white;
    transition: color 0.5s;
}
.index_social-icon {
  color: #c4d5dd;
  transition: color 0.5s;
}

.social-icon:hover {
    color: #ffffff;
}

.index_social-icon:hover {
  color: #ffffff;
}

.footertwo {
    display: flex;
    flex-direction: column;
    align-items: center;
}

  .banjo-gallery {    
    line-height: 0;       
     -webkit-column-count: 3;    
     -webkit-column-gap: 0px;    
     -moz-column-count: 3;
     -moz-column-gap: 0px;
      column-count: 3;    
      column-gap: 0;
  }  
 
  .gallery_header {
    padding: 2rem;
    padding-top: 4rem;
    text-align: center;
    font-style: none;
    list-style-type: none;
  }

  .gallery_container a {
    font-style: none;
    list-style-type: none;
    text-decoration: none;

  }

  h2 { 
    font-family: 'Libre Franklin', sans-serif;  
    color: #7E4E32;
    font-weight: 500;
  }

  .gallery_container h2:hover {
    transform: scale(1.1);
    transform-origin: center;
    transition: 0.3s;
  }

  .gallery_container img:hover {
    transform: scale(1.03);
    transform-origin: center;
    transition: 0.3s;
  }



  .banjo-gallery img {    
    width: 100% !important;    
    height: auto !important;  
    padding: 2rem;
  }  
  .banjo-gallery {    
    display:inline-block;    
    margin-right: auto;    
    margin-left: auto;  
  } 
  .gallery_main {
    display: flex;
    flex-grow: 1;
    flex-wrap: wrap;
    text-align: center;
    justify-content: space-evenly;
  }

  @media only screen and (max-width: 600px) {
    .gallery_container img {
      width: 100%;
      height: auto;
      padding-inline: 2rem;
      margin: 10px;
    }
  }

  .gallery_container {
    margin: 2rem;
  }

  .gallery_container img {
    width: 400px;

  }
  @media (max-width: 1000px) {
    .banjo-gallery {
    -moz-column-count:    3;
    -webkit-column-count: 3;
    column-count:         3;
    }
   }  
  @media (max-width: 800px) {
    .banjo-gallery {
    -moz-column-count:    2;
    -webkit-column-count: 2;
    column-count:         2;
    }
   }  
  @media (max-width: 600px) {
    .banjo-gallery {
    -moz-column-count:    1;
    -webkit-column-count: 1;
     column-count:        1;
    }
   }

   .container {
    display: flex;
    justify-content:space-evenly;
    flex-grow: 1;
    align-items: center;
    color: #7E4E32;
    font-size: 18px;
   }

   .contact-container {
    display: flex;
    justify-content:space-evenly;
    flex-grow: 1;
    align-items: center;
    color: #7E4E32;
    font-size: 18px;
    padding-top: 40px;

   }


   .contact-container a {
    color: #7E4E32;
    text-decoration: none;
   }

   .about {
    display: flex;
   }

 

   .text {
    background-color: #7BB6DB;
    margin: 100px ;
    padding: 40px;
    border-radius: 30px;
   }

    .container img {
    width: fit-content;
    margin-left: 100px;
    border-radius: 50%;

   }

   .contact-container img {
    width: fit-content;
    margin-left: 100px;
    border-radius: 50%;

   }

   

   .about_me_right p {
    margin: 100px;
    background-color: #7BB6DB;
    padding: 20px;
   }

   @media only screen and (max-width: 600px){
    .container {
      flex-wrap: wrap;
      text-align: left;
      background-color: #d3e4eb;
    }
    .container img {
      width: 100%;
      height: auto;
      margin: 10px;
      padding: 40px;
      border-radius: 50%;
    }
    .text {
      /* adds some good flexibility to responsiveness - margin inline omits top and bottom */
      margin-inline: auto;
      width: 80%;
      
      margin-top: 10px;
      text-align: left;
      border-radius: 40px;
      padding:40px;
    }

   }
/* ... */

